# SimplilearnDemos

./: .gitignore
qForDevelopersJava/demo-01/: OrderProcessorDemo.java  demo-01.java
qForDevelopersJava/demo-02/: SalesReport.java
qForDevelopersJava/demo-03/: README.md  pom.xml
qForDevelopersJava/demo-03/src/main/java/logcleaner/: Cli.java  IoUtils.java  Parsing.java  Reporting.java
qForDevelopersJava/demo-03/src/main/java/logcleaner/model/: LogEvent.java  Report.java
qForDevelopersJava/demo-03/src/test/java/logcleaner/integration/: CliIT.java  CliIntegrationTest.java
qForDevelopersJava/demo-03/src/test/java/logcleaner/unit/: ParsingTest.java
qForDevelopersPython/q-demo-01/: demo-01.py  q-demo-01.py  qDemo.py
qForDevelopersPython/q-demo-02/: sales_report.py  sample.csv
qForDevelopersPython/q-demo-03/log-cleaner/: README.md  pyproject.toml
qForDevelopersPython/q-demo-03/log-cleaner/src/logcleaner/: __init__.py  cli.py  io_utils.py  parsing.py  reporting.py
qForDevelopersPython/q-demo-03/log-cleaner/tests/integration/: test_cli_integration.py
qForDevelopersPython/q-demo-03/log-cleaner/tests/unit/: test_parsing.py
